apps/budget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget
  labels:
    app: budget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget
  template:
    metadata:
      labels:
        app: budget
    spec:
      containers:
      - name: budget
        image: docker.io/actualbudget/actual-server:26.9.0-alpine
        ports:
        - containerPort: 5006
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: budget-data
