apps/budget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget
spec:
  selector:
    app: budget
  ports:
    - protocol: TCP
      port: 5006
      name: http
      targetPort: http
